@@ -1,5 +1,7 @@
 Revision history for Test::Count
 
+          - Add the ./scripts/tag-release.pl to tag a release.
+
 0.0701    Wed Jun  1 21:38:16 IDT 2011
           - Fix t/04-modify-file-in-place.t to use File::Temp's tempdir().
             - This was done to settle MS-Windows-based testers such as:
